# rupca

./: Cargo.toml  README.md
docs/arpack/: PORTING.md
examples/: benchmark_pbmc.rs
scripts/: benchmark_scanpy_pbmc.py
src/: lib.rs  ruanndata_adapter.rs
src/arpack_symm/: aitr.rs  apps.rs  aup2.rs  conv.rs  mod.rs  sort.rs  tridiag.rs
