[package]
name = "rupca"
version = "0.1.0"
edition = "2021"
description = "Sparse-input PCA mirroring the Scanpy/sklearn sparse ARPACK path"
license = "BSD-2-Clause"

[lib]
name = "rupca"
path = "src/lib.rs"

[features]
default = []
ruanndata = ["dep:ruanndata"]

[dependencies]
nalgebra = "0.33"
rand = "0.8"
ruanndata = { git = "https://github.com/pachterlab/ruanndata", optional = true }
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"
